fix(mapper): Leave more space for the scrollbar in the mapper flow sidebar
Fixes #973

--- a/src/app/integrations/edit-page/edit-page.component.scss
+++ b/src/app/integrations/edit-page/edit-page.component.scss
@@ -25,6 +25,13 @@
     padding: 20px;
   }
 
+  .mapper-main {
+    flex: 1 1 auto;
+    position: relative;
+    height: 100%;
+    overflow: auto;
+  }
+
   .wizard-sidebar {
     flex: 0 0 auto;
     position: relative;
@@ -34,5 +41,14 @@
     overflow-y: auto;
     padding: 20px 20px 0 20px;
     min-width: 300px;
+  }
+
+  .mapper-sidebar {
+    flex: 0 0 auto;
+    position: relative;
+    background: #fafafa;
+    border-right: 1px solid #d1d1d1;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 }
