--- a/src/app/integrations/edit-page/flow-view/flow-view.component.scss
+++ b/src/app/integrations/edit-page/flow-view/flow-view.component.scss
@@ -32,15 +32,16 @@
     overflow-y: scroll;
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-left: -20px;
     margin-right: -20px;
 
     width: 320px;
     display: flex;
     flex-direction: column;
     &.collapsed {
-      width: 66px;
-      padding-left: 6px;
-      padding-right: 6px;
+      width: 150px;
+      align-items: center;
+      margin-right: 0;
     }
     .start,
     .finish {
@@ -102,9 +103,8 @@
     flex-wrap: nowrap;
     flex: 0 0 auto;
     min-height: 110px;
-    width: calc(100% + 20px);
     .step-line {
-      position: absolute; //height: 150px;
+      position: absolute;
       height: 100%;
       top: 0;
       left: 46px;
